# M1

./: .cproject  .gitignore  .mxproject  .project  Changelog.md  PBMM Debug.launch  PBMM Release.launch  PBMM.ioc  STM32G030C8TX_FLASH.ld
Core/: BMA400.c  MotorSpeedFeedbackAPI.c  detection.c  display.c  encoder.c  font.c  key.c  memory.c  mode.c  pcba_test.c  tlc6983.c  uart.c
Core/Inc/: BMA400.h  TLC6983.h  constant.h  main.h  memory.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  syscalls.c
VisualStudio/: CMakeLists.txt  PBMM.sln  PBMM.vgdbcmake  version.cmake  version.h.in
